samples/_failures_safe/1761293864_e7c704_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d76bd449.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_d76bd449.c:165:5: error: expected expression at end of input
  165 |     if (parser ==
      |     ^~
./samples/SAFE/__tmp_d76bd449.c:165:5: error: expected declaration or statement at end of input
